--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
       <div class="container">
         <div class="heading text-center">
           <h2>Portfolio</h2>
-          <h3> Below is a collection of projects, as well as my work experience.</h3>
+          <h3> Below is a collection of my projects, as well as my work experience.</h3>
         </div>
 
         <div id="grid-gallery" class="grid-gallery">
@@ -449,10 +449,19 @@
         </div>
       </div>
 <!---------------------------------------------------------------------------------------------------------------------------------------------------------------->
+<section class="feedback" id="feedback">
+        <div class="container">
+          <div class="heading">
+            <h2>References</h2>
+            <h3>Feel free to contact any of references below in regard to my abilities.<br>
+              </h3>
+          </div>
+        </div>
+
 <div class="row">
         <div class="col-md-6">
           <div class="papers text-center">
-            <img src="img/team/1.jpg" alt=""><br/>
+            <img src="img/team/1.jpg" alt="" height="100" width="100"><br/>
             <h4 class="">Sean Healy(Developer @ Webio)</h4>
             <p>
               Monika is an amazing data scientist and Developer. I worked with her in Webio and I must say she is a very good team player. She is a hard working and very serious team player. She certainly can get my full recommendation.
@@ -462,17 +471,17 @@
 
         <div class="col-md-6">
                 <div class="papers text-center">
-                  <img src="img/team/1.jpg" alt=""><br/>
+                  <img src="img/team/1.jpg" alt="" height="100" width="100"><br/>
                   <h4 class="">Sean Healy(Developer @ Webio)</h4>
                   <p>
                     Monika is an amazing data scientist and Developer. I worked with her in Webio and I must say she is a very good team player. She is a hard working and very serious team player. She certainly can get my full recommendation.
                   </p>
                 </div>
         </div>
-        
+
         <div class="col-md-6">
           <div class="papers text-center">
-            <img src="img/team/2.jpg" alt=""><br/>
+            <img src="img/team/2.jpg" alt="" height="100" width="100"><br/>
             <h4 class="">David Power(Developer @ Webio)</h4>
             <p>
               I had the privilege of working with Monika in Webio. She is proactive, technically sound and responsible employee. She is amazing in Machine Learning and AI stuff. She is always ready to put all her energy and time to get the job done.
@@ -498,8 +507,6 @@
           <div class="contact-info">
             <div class="col-md-5">
               <h4>My Contact Info</h4>
-              <h5>any thing about contact</h5>
-              <p>write about linkedin</p>
               <ul>
                 <li><i class="fa fa-home fa-2x"></i> HydeCourt, Townsend Street, Dublin 2</li>
                 <li><i class="fa fa-phone fa-2x"></i> +353 </li>
