--- a/index.html
+++ b/index.html
@@ -459,9 +459,9 @@
         </div>
 
 <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-4">
           <div class="papers text-center">
-            <img src="img/team/1.jpg" alt="" height="100" width="100"><br/>
+            <img src="img/team/1.jpg" alt=""><br/>
             <h4 class="">Sean Healy(Developer @ Webio)</h4>
             <p>
               Monika is an amazing data scientist and Developer. I worked with her in Webio and I must say she is a very good team player. She is a hard working and very serious team player. She certainly can get my full recommendation.
@@ -469,9 +469,9 @@
           </div>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-4">
                 <div class="papers text-center">
-                  <img src="img/team/1.jpg" alt="" height="100" width="100"><br/>
+                  <img src="img/team/1.jpg" alt=""><br/>
                   <h4 class="">Sean Healy(Developer @ Webio)</h4>
                   <p>
                     Monika is an amazing data scientist and Developer. I worked with her in Webio and I must say she is a very good team player. She is a hard working and very serious team player. She certainly can get my full recommendation.
@@ -479,9 +479,9 @@
                 </div>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-4">
           <div class="papers text-center">
-            <img src="img/team/2.jpg" alt="" height="100" width="100"><br/>
+            <img src="img/team/2.jpg" alt=""><br/>
             <h4 class="">David Power(Developer @ Webio)</h4>
             <p>
               I had the privilege of working with Monika in Webio. She is proactive, technically sound and responsible employee. She is amazing in Machine Learning and AI stuff. She is always ready to put all her energy and time to get the job done.
@@ -504,7 +504,7 @@
         </div>
       </div>
 
-          <div class="contact-info">
+          <div class="contact-info" style="display: flex;">
             <div class="col-md-5">
               <h4>My Contact Info</h4>
               <ul>
