--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </div>
         </div>
       </div>
-      <div class="menu">
+      <div class="menu" style="position:relative;">
         <div class="navbar-wrapper">
           <div class="container">
             <div class="navwrapper">
@@ -504,7 +504,7 @@
         </div>
       </div>
 
-          <div class="contact-info" style="display: flex;">
+          <div class="contact-info" style="display:flex;">
             <div class="col-md-5">
               <h4>My Contact Info</h4>
               <ul>
