--- a/index.html
+++ b/index.html
@@ -65,8 +65,6 @@
     <section class="aboutus" id="aboutus">
       <div class="container">
         <div class="heading text-center">
-            <p>  </p>
-            <p>  </p>
           <h2>About Me</h2>
           <h3>Hi!. I am Monika Kumar. I am a Artificial Intelligence Enthusiast. I am Masters in data Analytics and an another Masters in Computer Application. I am having 4 years of combined experience in programming, testing, Dubbing, Data analysis, and machine learning. I am Excel in creating data driven systems and has proven skills in statistical programming, machine learning, Artificial Intelligence and Natural Language Processing. I served as part of global teams, working to deliver high quality products and services to various clients. With my wide-ranging technical skills and superior capacity to tackle time-sensitive projects I proved to deliver best-in-class customer service. </h3>
         </div>
@@ -175,21 +173,21 @@
             <div class="skills">
               <h3 class="main text-center">Statistical Data Analysis</h3>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url(img/spss.png)">
+                <div class="rm-thumb" style="background-image: url(img/spss.png); background-size:105%">
                 </div>
                 <h5>SPSS/Excel</h5>
                 <p>Good understanding of Statistical packages which I used for complex data analysis and manipulation like SPSS, SAS, and Excel.
                 </p>
               </div>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url(img/python.png)">
+                <div class="rm-thumb" style="background-image: url(img/python.png); background-size:100%">
                 </div>
                 <h5>Python</h5>
                 <p> Experience in Data Analysis using python pandas. Good knowledge of various python libraries which are used in Data Analysis like Scipy and NumPy.
                 </p>
               </div>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url(img/r.png)">
+                <div class="rm-thumb" style="background-image: url(img/r.png); background-size:120%">
                 </div>
                 <h5>R</h5>
                 <p>Performed statistical analysis of data which includes Correlation, Logistic regression, Anova test, Hypothesis testing, outlier detection etc using R.
@@ -201,21 +199,21 @@
             <div class="skills">
               <h3 class="main text-center">Machine Learning</h3>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url(img/python.png)">
+                <div class="rm-thumb" style="background-image: url(img/python.png); background-size:100%">
                 </div>
                 <h5>Python</h5>
                 <p>Implementation of machine learning algorithms and Deep Learning Neural Networks using Python programming.
                 </p>
               </div>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url(img/aws.png)">
+                <div class="rm-thumb" style="background-image: url(img/aws.png); background-size:90%">
                 </div>
                 <h5>Amazon Web Services</h5>
                 <p>Hands On Experience with Amazon Web Services like Amazon Machine Learning, Amazon Lex, Amazon Polly, Translate etc. 
                 </p>
               </div>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url(img/weka.png)">
+                <div class="rm-thumb" style="background-image: url(img/weka.png); background-size:130%">
                 </div>
                 <h5>Weka</h5>
                 <p> Used Wika for data pre-processing, classification, regression, clustering, association rules and visualization.
@@ -227,21 +225,21 @@
             <div class="skills">
               <h3 class="main text-center">PROGRAMMING</h3>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url(img/python.png)">
+                <div class="rm-thumb" style="background-image: url(img/python.png); background-size:100%">
                 </div>
                 <h5>Python</h5>
                 <p> Mostly used Python in Data analysis and machine learning problems. Good understanding of the basics of python programming language.
                 </p>
               </div>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url(img/java.png)">
+                <div class="rm-thumb" style="background-image: url(img/java.png); background-size:100%">
                 </div>
                 <h5>Java</h5>
                 <p> One of my favourate programming language. Mostly used in developing web applications.
                 </p>
               </div>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url(img/js.png)">
+                <div class="rm-thumb" style="background-image: url(img/js.png); background-size:120%">
                 </div>
                 <h5>JavaScript</h5>
                 <p> Client side multi-paradigm scripting language. It is dynamic and supports object oriented and functional programming. 
@@ -505,7 +503,7 @@
       </div>
 
           <div class="contact-info" style="display:flex;">
-            <div class="col-md-5">
+            <div class="col-md-5" style="margin:auto;">
               <h4>My Contact Info</h4>
               <ul>
                 <li><i class="fa fa-home fa-2x"></i> HydeCourt, Townsend Street, Dublin 2</li>
@@ -514,35 +512,6 @@
                 <li><i class="fa fa-download fa-2x"></i> Download My Resume</li>
               </ul>
             </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8 col-md-offset-2">
-            <div id="sendmessage">Your message has been sent. Thank you!</div>
-            <div id="errormessage"></div>
-            <form action="" method="post" role="form" class="contactForm">
-              <div class="form-group">
-                <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                <div class="validation"></div>
-              </div>
-              <div class="form-group">
-                <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                <div class="validation"></div>
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                <div class="validation"></div>
-              </div>
-              <div class="form-group">
-                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                <div class="validation"></div>
-              </div>
-
-              <div class="text-center"><button type="submit" class="contact submit">Send Message</button></div>
-            </form>
           </div>
         </div>
       </div>
