--- a/index.html
+++ b/index.html
@@ -73,12 +73,10 @@
 
 
 <!-- Quick Links Section -->
-<section id="links">
+<section class="aboutus id="aboutus">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Quick Links</h2>
-            </div>
+        <div class="heading text-center">
+                <h2>Quick Links</h2>
         </div>
         <div class="row text-center">
             <div class="col-md-3">
@@ -101,9 +99,15 @@
             </div>
             <div class="col-md-3">
                <div class="team-member">
-                    <a href="img/header/DavidPowerResume.pdf" target="_blank"><img src="img/CV3.png" class="img-responsive img-circle" title="CV"></a>
+                    <a href="img/header/MonikaResume.pdf" target="_blank"><img src="img/CV3.png" class="img-responsive img-circle" title="CV"></a>
                 </div>
                 <h4 class="service-heading">Curriculum Vitae</h4>
+            </div>
+            <div class="col-md-3">
+                    <div class="team-member">
+                         <a href="img/header/MonikaResume.pdf" target="_blank"><img src="img/blog.png" class="img-responsive img-circle" title="CV"></a>
+                     </div>
+                     <h4 class="service-heading">Blog</h4>
             </div>
         </div>
     </div>
@@ -232,7 +236,7 @@
                 </p>
               </div>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url(img/java.png); background-size:100%">
+                <div class="rm-thumb" style="background-image: url(img/java.png); background-size:120%">
                 </div>
                 <h5>Java</h5>
                 <p> One of my favourate programming language. Mostly used in developing web applications.
