--- a/index.html
+++ b/index.html
@@ -236,10 +236,10 @@
                 </p>
               </div>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url(img/java.png); background-size:120%">
+                <div class="rm-thumb" style="background-image: url(img/java.png); background-size:130%">
                 </div>
                 <h5>Java</h5>
-                <p> One of my favourate programming language. Mostly used in developing web applications.
+                <p> Good understanding of Core Java and Advance Java. I used Java in developing web applications.
                 </p>
               </div>
               <div class="restitem clearfix">
