--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                       <ul class="nav navbar-nav">
                         <li class="menuItem active"><a href="#wrapper">Home</a></li>
                         <li class="menuItem"><a href="#aboutus">About Me</a></li>
-						<li class="menuItem"><a href="#Quick Links">Quick Links</a></li>
+						<li class="menuItem"><a href="#quicklinks">Quick Links</a></li>
                         <li class="menuItem"><a href="#specialties">Skills</a></li>
                         <li class="menuItem"><a href="#gallery">Portfolio</a></li>
                         <li class="menuItem"><a href="#feedback">Education</a></li>
@@ -73,37 +73,37 @@
 
 
 <!-- Quick Links Section -->
-<section class="aboutus id="aboutus">
+<section class="aboutus" id="quicklinks">
     <div class="container">
         <div class="heading text-center">
                 <h2>Quick Links</h2>
         </div>
-        <div class="row text-center">
-            <div class="col-md-3">
+        <div class="row text-center" style="display:flex;justify-content:center">
+            <div class="col-md-2">
                 <div class="team-member">
                     <a href="https://github.com/Monika-Kumar" target="_blank"><img src="img/GitHubB1.png" class="img-responsive img-circle" title="GitHub"></a>
                 </div>
                 <h4 class="service-heading">GitHub</h4>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <div class="team-member">
                     <a href="https://www.hackerrank.com/MonikaKumar" target="_blank"><img src="img/Hack4.png" class="img-responsive img-circle" title="HackerRank"></a>
                 </div>
                 <h4 class="service-heading">HackerRank</h4>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <div class="team-member">
                     <a href="https://ie.linkedin.com/in/monikakumar29" target="_blank"><img src="img/LinkedIn3.png" class="img-responsive img-circle" title="LinkedIn"></a>
                 </div>
                 <h4 class="service-heading">LinkedIn</h4>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-2">
                <div class="team-member">
                     <a href="img/header/MonikaResume.pdf" target="_blank"><img src="img/CV3.png" class="img-responsive img-circle" title="CV"></a>
                 </div>
                 <h4 class="service-heading">Curriculum Vitae</h4>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-2">
                     <div class="team-member">
                          <a href="img/header/MonikaResume.pdf" target="_blank"><img src="img/blog.png" class="img-responsive img-circle" title="CV"></a>
                      </div>
@@ -129,7 +129,7 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-md-6 wow fadeInRight" data-wow-offset="0" data-wow-delay="0.3s" ">
+          <div class="col-md-6 wow fadeInRight" data-wow-offset="0" data-wow-delay="0.3s">
 					<div class="skill ">
 						<div class="progress-wrap ">
 							<h3>Data Analysis and Data Mining</h3>
@@ -165,7 +165,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-6 wow fadeInRight " data-wow-offset="0 " data-wow-delay="0.6s "">
+				<div class="col-md-6 wow fadeInRight " data-wow-offset="0 " data-wow-delay="0.6s ">
             <img src="img/team/6.jpg" class="img-responsive">
           </div>
         </div>
@@ -422,7 +422,7 @@
             <div class="hi-icon-wrap hi-icon-effect">
               <h4>MASTERS IN COMPUTING      (Data Analytics)</h4>
               <h5>Sep 2016 - Nov 2017</h5>
-              <i class="fa fa-laptop"></i>
+              <i class="fa" style="background-image:url(img/dcu.png);background-size:100%;"></i>
               <p>Dublin City University</p>
             </div>
           </div>
@@ -433,7 +433,7 @@
             <div class="hi-icon-wrap hi-icon-effect">
               <h4>MASTERS IN COMPUTER APPLICATION</h4>
               <h5>JUL 2009 - MAY 2012</h5>
-              <i class="fa fa-book"></i>
+              <i class="fa" style="background-image:url(img/vit.png);background-size:100%;"></i>
               <p>Vellore Institute of Technology</p>
             </div>
           </div>
@@ -444,7 +444,7 @@
             <div class="hi-icon-wrap hi-icon-effect">
               <h4>BACHLORS IN COMPUTER APPLICATION</h4>
               <h5>JUL 2006 - MAY 2009</h5>
-              <i class="fa fa-gear"></i>
+              <i class="fa" style="background-image:url(img/banasthali.png);background-size:100%;"></i>
               <p>Banasthali University</p>
             </div>
           </div>
@@ -461,7 +461,7 @@
         </div>
 
 <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-3">
           <div class="papers text-center">
             <img src="img/team/1.jpg" alt=""><br/>
             <h4 class="">Sean Healy(Developer @ Webio)</h4>
@@ -471,7 +471,7 @@
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-3">
                 <div class="papers text-center">
                   <img src="img/team/1.jpg" alt=""><br/>
                   <h4 class="">Sean Healy(Developer @ Webio)</h4>
@@ -481,7 +481,7 @@
                 </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-3">
           <div class="papers text-center">
             <img src="img/team/2.jpg" alt=""><br/>
             <h4 class="">David Power(Developer @ Webio)</h4>
