--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
             <div class="hi-icon-wrap hi-icon-effect">
               <h4>MASTERS IN COMPUTING      (Data Analytics)</h4>
               <h5>Sep 2016 - Nov 2017</h5>
-              <i class="fa" style="background-image:url(img/dcu.png);background-size:100%;"></i>
+              <i class="fa" style="background-image:url(img/dcu.png);background-size:105%;background-color:transparent;background-repeat:no-repeat;"></i>
               <p>Dublin City University</p>
             </div>
           </div>
@@ -460,7 +460,7 @@
           </div>
         </div>
 
-<div class="row">
+<div class="row text-center" style="display:flex;justify-content:center;"> 
         <div class="col-md-3">
           <div class="papers text-center">
             <img src="img/team/1.jpg" alt=""><br/>
