--- a/index.html
+++ b/index.html
@@ -465,9 +465,10 @@
           <div class="papers text-center">
             <img src="img/team/1.jpg" alt=""><br/>
             <h4 class="">Sean Healy</h4>
-            <p>
+            <p align="center">
               Developer, Webio
-              Sean.healy@webio.com
+            </p>
+            <p align="center">Sean.healy@webio.com
             </p>
           </div>
         </div>
@@ -476,8 +477,10 @@
                 <div class="papers text-center">
                   <img src="img/team/1.jpg" alt=""><br/>
                   <h4 class="">Sean Healy</h4>
-                  <p>
+                  <p align="center">
                     Developer, Webio
+                  </p>
+                  <p align="center">  
                     Sean.healy@webio.com
                   </p>
                 </div>
@@ -487,8 +490,10 @@
           <div class="papers text-center">
             <img src="img/team/2.jpg" alt=""><br/>
             <h4 class="">David Power</h4>
-            <p>
+            <p align="center">
                  Senior Developer, Webio
+            </p>
+            <p align="center">     
                  david.power@webio.com
             </p>
           </div>
