--- a/index.html
+++ b/index.html
@@ -464,11 +464,10 @@
         <div class="col-md-3">
           <div class="papers text-center">
             <img src="img/team/1.jpg" alt=""><br/>
-            <h4 class="">Sean Healy</h4>
-            <p align="center">
-              Developer, Webio
-            </p>
-            <p align="center">Sean.healy@webio.com
+            <h4 class=""><a href="https://seanhly.github.io">Se&aacute;n Healy</a></h4>
+            <p class="text-center">
+              Developer, Webio<br>
+              sean.healy@webio.com
             </p>
           </div>
         </div>
@@ -477,11 +476,9 @@
                 <div class="papers text-center">
                   <img src="img/team/1.jpg" alt=""><br/>
                   <h4 class="">Sean Healy</h4>
-                  <p align="center">
-                    Developer, Webio
-                  </p>
-                  <p align="center">  
-                    Sean.healy@webio.com
+                  <p class="text-center">
+                    Developer, Webio<br> 
+                    sean.healy@webio.com
                   </p>
                 </div>
         </div>
@@ -489,11 +486,9 @@
         <div class="col-md-3">
           <div class="papers text-center">
             <img src="img/team/2.jpg" alt=""><br/>
-            <h4 class="">David Power</h4>
-            <p align="center">
-                 Senior Developer, Webio
-            </p>
-            <p align="center">     
+            <h4 class=""><a href="https://www.dfp.ie">David Power</a></h4>
+            <p class="text-center">
+                 Senior Developer, Webio<br>    
                  david.power@webio.com
             </p>
           </div>
