--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
           <div class="papers text-center">
             <img src="img/team/1.jpg" alt=""><br/>
             <h4 class=""><a href="https://seanhly.github.io">Se&aacute;n Healy</a></h4>
-            <p class="text-center">
+            <p class="text-center" style="text-align:center;">
               Developer, Webio<br>
               sean.healy@webio.com
             </p>
@@ -476,8 +476,8 @@
                 <div class="papers text-center">
                   <img src="img/team/1.jpg" alt=""><br/>
                   <h4 class="">Sean Healy</h4>
-                  <p class="text-center">
-                    Developer, Webio<br> 
+                  <p class="text-center" style="text-align:center;">
+                        Developer, Webio<br> 
                     sean.healy@webio.com
                   </p>
                 </div>
@@ -487,8 +487,8 @@
           <div class="papers text-center">
             <img src="img/team/2.jpg" alt=""><br/>
             <h4 class=""><a href="https://www.dfp.ie">David Power</a></h4>
-            <p class="text-center">
-                 Senior Developer, Webio<br>    
+            <p class="text-center" style="text-align:center;">
+                    Senior Developer, Webio<br>    
                  david.power@webio.com
             </p>
           </div>
