--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="heading text-center">
                 <h2>Quick Links</h2>
         </div>
-        <div class="row text-center" style="display:flex;justify-content:center">
+        <div class="row text-center" style="display:flex;justify-content:center;flex-wrap:wrap">
             <div class="col-md-2">
                 <div class="team-member">
                     <a href="https://github.com/Monika-Kumar" target="_blank"><img src="img/GitHubB1.png" class="img-responsive img-circle" title="GitHub"></a>
@@ -460,7 +460,7 @@
           </div>
         </div>
 
-<div class="row text-center" style="display:flex;justify-content:center;"> 
+<div class="row text-center" style="display:flex;justify-content:center;flex-wrap:wrap"> 
         <div class="col-md-3">
           <div class="papers text-center">
             <img src="img/team/1.jpg" alt=""><br/>
