--- a/index.html
+++ b/index.html
@@ -475,10 +475,10 @@
         <div class="col-md-3">
                 <div class="papers text-center">
                   <img src="img/team/1.jpg" alt=""><br/>
-                  <h4 class="">Sean Healy</h4>
+                  <h4 class="">Ciaran Regan</h4>
                   <p class="text-center" style="text-align:center;">
                         Developer, Webio<br> 
-                    sean.healy@webio.com
+                        ciaran.regan@webio.com
                   </p>
                 </div>
         </div>
