--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="parallax text-center" style="background-image: url(img/1.jpg);">
           <div class="parallax-pattern-overlay">
             <div class="container text-center" style="height:600px;padding-top:170px;">
-              <a href="#"><img id="site-title" class=" wow fadeInDown" wow-data-delay="0.0s" wow-data-duration="0.9s" src="img/2.png" alt=""/></a>
+              <a href="#"><img id="site-title" class=" wow fadeInDown" shape="circle" wow-data-delay="0.0s" wow-data-duration="0.9s" src="img/2.png" alt=""/></a>
               <h2 class="intro"><a href="index.html">Monika Kumar</a></h2>
             </div>
           </div>
@@ -99,13 +99,13 @@
             </div>
             <div class="col-md-2">
                <div class="team-member">
-                    <a href="img/header/MonikaResume.pdf" target="_blank"><img src="img/CV3.png" class="img-responsive img-circle" title="CV"></a>
+                    <a href="img/monikacv.pdf" target="_blank"><img src="img/CV3.png" class="img-responsive img-circle" title="CV"></a>
                 </div>
                 <h4 class="service-heading">Curriculum Vitae</h4>
             </div>
             <div class="col-md-2">
                     <div class="team-member">
-                         <a href="img/header/MonikaResume.pdf" target="_blank"><img src="img/blog.png" class="img-responsive img-circle" title="CV"></a>
+                         <a href="img/blog.pdf" target="_blank"><img src="img/blog.png" class="img-responsive img-circle" title="blog"></a>
                      </div>
                      <h4 class="service-heading">Blog</h4>
             </div>
@@ -474,7 +474,7 @@
 
         <div class="col-md-3">
                 <div class="papers text-center">
-                  <img src="img/team/1.jpg" alt=""><br/>
+                  <img src="img/team/ciaran1.jpg" alt=""><br/>
                   <h4 class="">Ciaran Regan</h4>
                   <p class="text-center" style="text-align:center;">
                         Developer, Webio<br> 
