--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
       <div class="container">
         <div class="heading text-center">
           <h2>Portfolio</h2>
-          <h3> Below is a collection of my projects, as well as my work experience.</h3>
+          <h3> Below is a collection of projects, as well as work experience.</h3>
         </div>
 
         <div id="grid-gallery" class="grid-gallery">
@@ -271,10 +271,10 @@
               <!-- for Masonry column width -->
               <li>
                 <figure>
-                  <img src="img/work/1.jpg" alt="" />
-                  <figcaption>
-                    <h3>Stock Market Prediction (sentiment Analysis)</h3>
-                    <p>Final Year Masters Thesis</p>
+                  <a href="img/monikacv.pdf" target="_blank"><img src="img/work/1.jpg" alt="" /></a>
+                  <figcaption> 
+                    <h3>Stock Market Prediction (Opinion Mining)</h3>
+                    <p>Research Paper</p>
                   </figcaption>
                 </figure>
               </li>
@@ -282,8 +282,8 @@
                 <figure>
                   <img src="img/work/2.jpg" alt="" />
                   <figcaption>
-                    <h3>Census Data Analysis using R</h3>
-                    <p>Masters Project</p>
+                    <h3>Sentiment Analysis of Twitter Tweets</h3>
+                    <p>Masters Dissertation</p>
                   </figcaption>
                 </figure>
               </li>
@@ -300,8 +300,8 @@
                 <figure>
                   <img src="img/work/4.jpg" alt="" />
                   <figcaption>
-                    <h3>Secure Network by Group Key Protocol</h3>
-                    <p>Masters Dissertation</p>
+                    <h3>Census Data Analysis using R</h3>
+                    <p>Statistics Project</p>
                   </figcaption>
                 </figure>
               </li>
