--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
               <!-- for Masonry column width -->
               <li>
                 <figure>
-                  <a href="img/monikacv.pdf" target="_blank"><img src="img/work/1.jpg" alt="" /></a>
+                  <img src="img/work/1.jpg" alt="" />
                   <figcaption> 
                     <h3>Stock Market Prediction (Opinion Mining)</h3>
                     <p>Research Paper</p>
