--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
           <h3>Hi!. I am Monika Kumar. I am a Artificial Intelligence Enthusiast. I am Masters in data Analytics and an another Masters in Computer Application. I am having 4 years of combined experience in programming, testing, Dubbing, Data analysis, and machine learning. I am Excel in creating data driven systems and has proven skills in statistical programming, machine learning, Artificial Intelligence and Natural Language Processing. I served as part of global teams, working to deliver high quality products and services to various clients. With my wide-ranging technical skills and superior capacity to tackle time-sensitive projects I proved to deliver best-in-class customer service. </h3>
         </div>
     </section>
-<!------------------------------------------------------------------------------------------------------------------------------------------------------>
 
 
 <!-- Quick Links Section -->
@@ -116,7 +115,7 @@
 
 
 
-<!------------------------------------------------------------------------------------------------------------------------------------------------------>
+
 
     <!--skills-->
     <section class="specialties" id="specialties">
@@ -318,8 +317,8 @@
                 <figure>
                   <img src="img/work/6.jpg" alt="" />
                   <figcaption>
-                    <h3>Intern</h3>
-                    <p>Deciphex</p>
+                    <h3>Analyst</h3>
+                    <p>SAP(Joining Soon)</p>
                   </figcaption>
                 </figure>
               </li>
@@ -352,7 +351,7 @@
             <ul>
               <li>
                 <figure>
-                  <img src="img/work/1.jpg" alt="" />
+                  <img src="img/monikacv.pdf" alt="" />
                 </figure>
               </li>
               <li>
@@ -450,7 +449,8 @@
           </div>
         </div>
       </div>
-<!---------------------------------------------------------------------------------------------------------------------------------------------------------------->
+
+
 <section class="feedback" id="references">
         <div class="container">
           <div class="heading">
@@ -496,7 +496,7 @@
       </div>
     </div>
 
-<!---------------------------------------------------------------------------------------------------------------------------------------------------------------->      
+
     </section>
 
     <!--education-->
