--- a/index.html
+++ b/index.html
@@ -309,6 +309,37 @@
                   </figcaption>
                 </figure>
               </li>
+
+              <li>
+                    <figure>
+                      <img src="img/work/4.jpg" alt="" />
+                      <figcaption>
+                        <h3>Statistical Analysis of Census Data</h3>
+                        <p>Statistics Project</p>
+                      </figcaption>
+                    </figure>
+              </li>
+
+              <li>
+                    <figure>
+                      <img src="img/work/3.jpg" alt="" />
+                      <figcaption>
+                        <h3>Cloud Virtual Machine Performance Testing</h3>
+                        <p>Cloud Technologies project</p>
+                      </figcaption>
+                    </figure>
+              </li>
+
+              <li>
+                    <figure>
+                      <img src="img/work/2.jpg" alt="" />
+                      <figcaption>
+                        <h3>Sentiment Analysis of Twitter Tweets</h3>
+                        <p>Masters Dissertation</p>
+                      </figcaption>
+                    </figure>
+            </li>
+
               <li>
                     <figure>
                       <img src="img/work/1.jpg" alt="" />
@@ -317,37 +348,7 @@
                         <p>Research Paper</p>
                       </figcaption>
                     </figure>
-                </li>
-
-                  <li>
-                    <figure>
-                      <img src="img/work/2.jpg" alt="" />
-                      <figcaption>
-                        <h3>Sentiment Analysis of Twitter Tweets</h3>
-                        <p>Masters Dissertation</p>
-                      </figcaption>
-                    </figure>
-                  </li>
-
-                  <li>
-                    <figure>
-                      <img src="img/work/3.jpg" alt="" />
-                      <figcaption>
-                        <h3>Cloud Virtual Machine Performance Testing</h3>
-                        <p>Cloud Technologies project</p>
-                      </figcaption>
-                    </figure>
-                  </li>
-                  
-                  <li>
-                    <figure>
-                      <img src="img/work/4.jpg" alt="" />
-                      <figcaption>
-                        <h3>Census Data Analysis using R</h3>
-                        <p>Statistics Project</p>
-                      </figcaption>
-                    </figure>
-                  </li>
+                </li>      
 
             </ul>
           </section>
