--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="parallax text-center" style="background-image: url(img/1.jpg);">
           <div class="parallax-pattern-overlay">
             <div class="container text-center" style="height:600px;padding-top:170px;">
-              <a href="#"><img id="site-title" class=" wow fadeInDown" shape="circle" wow-data-delay="0.0s" wow-data-duration="0.9s" src="img/2.png" alt=""/></a>
+              <a href="#"><img id="site-title" class=" wow fadeInDown" shape="circle" wow-data-delay="0.0s" wow-data-duration="0.9s" src="img/2.png" alt="" style="border-radius:50%"/></a>
               <h2 class="intro"><a href="index.html">Monika Kumar</a></h2>
             </div>
           </div>
@@ -292,7 +292,7 @@
 
               <li>
                 <figure>
-                  <img src="img/work/7.jpg" alt="" />
+                  <img src="img/work/7.jpg" alt="" height=130px/>
                   <figcaption>
                     <h3>Intern</h3>
                     <p>CYMMIT</p>
@@ -302,7 +302,7 @@
 
               <li>
                 <figure>
-                  <img src="img/work/8.jpg" alt="" />
+                  <img src="img/work/8.jpg" alt="" height=130px/>
                   <figcaption>
                     <h3>Programmer Analyst</h3>
                     <p>Cognizant Technologies Solutions</p>
@@ -312,7 +312,7 @@
 
               <li>
                     <figure>
-                      <img src="img/work/4.jpg" alt="" />
+                      <img src="img/work/4.jpg" alt="" height="130px"/>
                       <figcaption>
                         <h3>Statistical Analysis of Census Data</h3>
                         <p>Statistics Project</p>
@@ -322,7 +322,7 @@
 
               <li>
                     <figure>
-                      <img src="img/work/3.jpg" alt="" />
+                      <img src="img/work/3.jpg" alt="" height="130px"/>
                       <figcaption>
                         <h3>Cloud Virtual Machine Performance Testing</h3>
                         <p>Cloud Technologies project</p>
@@ -332,7 +332,7 @@
 
               <li>
                     <figure>
-                      <img src="img/work/2.jpg" alt="" />
+                      <img src="img/work/2.jpg" alt="" height=130px/>
                       <figcaption>
                         <h3>Sentiment Analysis of Twitter Tweets</h3>
                         <p>Masters Dissertation</p>
@@ -342,7 +342,7 @@
 
               <li>
                     <figure>
-                      <img src="img/work/1.jpg" alt="" />
+                      <img src="img/work/1.jpg" alt="" height=130px/>
                       <figcaption> 
                         <h3>Stock Market Prediction (Opinion Mining)</h3>
                         <p>Research Paper</p>
@@ -544,8 +544,8 @@
           <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
           <li><a href="#"><i class="fa fa-flickr"></i></a></li>
         </ul>
-        <p align="left">Copyright © Monika Kumar 2018</p>
-        <p align="right">Made using Bootstrap agency theme</p>
+        <p style="float:left;">Copyright © Monika Kumar 2018</p>
+        <p style="float:right;">Made using Bootstrap agency theme</p>
 
       </div>
     </section>
