--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                     <figure>
                       <img src="img/work/1.jpg" alt="" height=130px/>
                       <figcaption> 
-                        <h3>Stock Market Prediction (Opinion Mining)</h3>
+                        <h3 style="font-size:1.05em;">Stock Market Prediction (Opinion Mining)</h3>
                         <p>Research Paper</p>
                       </figcaption>
                     </figure>
