--- a/index.html
+++ b/index.html
@@ -520,10 +520,10 @@
             <div class="col-md-5" style="margin:auto;">
               <h4>My Contact Info</h4>
               <ul>
-                <li><i class="fa fa-home fa-2x"></i> HydeCourt, Townsend Street, Dublin 2</li>
+                <li><i class="fa fa-home fa-2x"></i> HydeCourt, Townsend Street, Dublin 2, Ireland</li>
                 <li><i class="fa fa-phone fa-2x"></i> +353 </li>
                 <li><i class="fa fa-envelope fa-2x"></i> 292monika@gmail.com</li>
-                <li><i class="fa fa-download fa-2x"></i> Download My Resume</li>
+                <li><i class="fa fa-download fa-2x"></i><a href="img/monikacv.pdf" target="_blank"></a>Download My Resume</li>
               </ul>
             </div>
           </div>
