--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                 <li><i class="fa fa-home fa-2x"></i> HydeCourt, Townsend Street, Dublin 2, Ireland</li>
                 <li><i class="fa fa-phone fa-2x"></i> +353 </li>
                 <li><i class="fa fa-envelope fa-2x"></i> 292monika@gmail.com</li>
-                <li><i class="fa fa-download fa-2x"></i>Download My Resume</li>
+                <li><a href="img/monikacv.pdf" target="_blank"><i class="fa fa-download fa-2x"></i>Download My Resume</li></a>
               </ul>
             </div>
           </div>
