--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                     <figure>
                       <img src="img/work/1.jpg" alt="" height=130px/>
                       <figcaption> 
-                        <h3 style="font-size:1.05em;">Stock Market Prediction (Opinion Mining)</h3>
+                        <h3 style="font-size:1.05em;">Opinion Mining: Study of sentiments</h3>
                         <p>Research Paper</p>
                       </figcaption>
                     </figure>
@@ -358,44 +358,44 @@
             <ul>
               <li>
                 <figure>
-                  <img src="img/monikacv.pdf" alt="" />
+                  <img src="img/sap.pdf" alt="" />
                 </figure>
               </li>
               <li>
                 <figure>
-                  <img src="img/work/2.jpg" alt="" />
+                  <img src="img/work/webio.pdf" alt="" />
                 </figure>
               </li>
               <li>
                 <figure>
-                  <img src="img/work/3.jpg" alt="" />
+                  <img src="img/work/cymmit.pdf" alt="" />
                 </figure>
               </li>
               <li>
                 <figure>
-                  <img src="img/work/4.jpg" alt="" />
+                  <img src="img/work/cts.pdf" alt="" />
                 </figure>
               </li>
               <li>
                 <figure>
-                  <img src="img/work/5.jpg" alt="" />
+                  <img src="img/work/stats.pdf" alt="" />
                 </figure>
               </li>
               <li>
                 <figure>
-                  <img src="img/work/6.jpg" alt="" />
-                </figure>
-              </li>
-
-              <li>
-                <figure>
-                  <img src="img/work/7.jpg" alt="" />
+                  <img src="img/work/cloud.pdf" alt="" />
                 </figure>
               </li>
 
               <li>
                 <figure>
-                  <img src="img/work/8.jpg" alt="" />
+                  <img src="img/work/stock.pdf" alt="" />
+                </figure>
+              </li>
+
+              <li>
+                <figure>
+                  <img src="img/work/senti.pdf" alt="" />
                 </figure>
               </li>
             </ul>
