--- a/index.html
+++ b/index.html
@@ -358,44 +358,44 @@
             <ul>
               <li>
                 <figure>
-                  <img src="img/sap.pdf" alt="" />
+                  <img src="img/sap.jpg" alt="" />
                 </figure>
               </li>
               <li>
                 <figure>
-                  <img src="img/work/webio.pdf" alt="" />
+                  <img src="img/work/webio.jpg" alt="" />
                 </figure>
               </li>
               <li>
                 <figure>
-                  <img src="img/work/cymmit.pdf" alt="" />
+                  <img src="img/work/cymmit.jpg" alt="" />
                 </figure>
               </li>
               <li>
                 <figure>
-                  <img src="img/work/cts.pdf" alt="" />
+                  <img src="img/work/cts.jpg" alt="" />
                 </figure>
               </li>
               <li>
                 <figure>
-                  <img src="img/work/stats.pdf" alt="" />
+                  <img src="img/work/stats.jpg" alt="" />
                 </figure>
               </li>
               <li>
                 <figure>
-                  <img src="img/work/cloud.pdf" alt="" />
-                </figure>
-              </li>
-
-              <li>
-                <figure>
-                  <img src="img/work/stock.pdf" alt="" />
+                  <img src="img/work/cloud.jpg" alt="" />
                 </figure>
               </li>
 
               <li>
                 <figure>
-                  <img src="img/work/senti.pdf" alt="" />
+                  <img src="img/work/stock.jpg" alt="" />
+                </figure>
+              </li>
+
+              <li>
+                <figure>
+                  <img src="img/work/senti.jpg" alt="" />
                 </figure>
               </li>
             </ul>
