--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             <ul>
               <li>
                 <figure>
-                  <img src="img/sap.jpg" alt="" />
+                  <img src="img/work/sap.jpg" alt="" />
                 </figure>
               </li>
               <li>
