--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                       <img src="img/work/6.jpg" alt="" />
                       <figcaption>
                         <h3>Analyst</h3>
-                        <p>SAP(Joining Soon)</p>
+                        <p>SAP</p>
                       </figcaption>
                     </figure>
                 </li>
